tests/security/taintProcOpen/output.txt
ERROR: TaintedData - input.hack:2:17 - Detected tainted shell code